--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <!-- Google Fonts -->
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
-    </style>
+        @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+        </style>
 
 </head>
 
@@ -35,7 +35,8 @@
 
         <section class="home" id="home">
             <div class="conteudo">
-                <p>A Robocup é um projeto entre os alunos da Fiap visando integração entre os educandos e para gerar familiaridade com as disciplinas de nós alunos. São formados grupos de até 5 pessoas e as equipes formadas terá o objetivo final de montagem do robô. Nossa equipe é composta por 5 pessoas, sendo composto por Guilherme Nesti e Gabriel Borges, responsáveis pelo design do robô, Enzo Grisolia e Lucas Rodrigues responsáveis pela arquitetura do robô, e Matheus Lion responsável por todo marketing do projeto. Após nossa meta de montagem for cumprida haverá uma disputa entre as equipes, o robô vencedor será o que conseguir manter a própria bexiga intacta, estourando então a bexiga adversária.</p>
+                <h1>Gigantes da FIAP</h1>
+                <p>O projeto da ROBOCUP, é um projeto que envolve a documentação e o desenvolvimento de um robô para fazer a integração de todas as disciplinas do 1 ano de SI e dos alunos da graduação da FIAP.</p>
             </div>
             <div class="imagem-principal">
                 <img src="./images/roboimg.copia.jpg" alt="Imagem referente a versão atual do robô">
@@ -51,9 +52,9 @@
                 <div class="caixa">
 
                     <div class="icones">
-                        <img src="./images/icone01.svg" alt="ícone de ...">
+                        <img src="./images/IconNome.svg" alt="ícone do robô unimate">
                         <h4>O Nome</h4>
-                        <p>O nome do robô foi inspirado no primeiro robô industrial do mundo que foi nomeado de “Unimate” e mesclamos ele com o nome de um personagem do filme “Gigantes de Aço” cujo o nome é “Finn”, formando então o “Unimate Finn”.</p>
+                        <p>O nome foi inspirado no primeiro robô industrial do mundo, e em um personangem de Gigantes de Aço.</p>
                     </div>
 
                 </div>
@@ -61,20 +62,21 @@
                 <div class="caixa">
                     
                     <div class="icones">
-                        <img src="./images/icone01.svg" alt="ícone de ...">
+                        <img src="./images/IconArma.svg" alt="ícone de um alvo">
                         <h4>Nossa Arma</h4>
-                        <p>Nossa arma terá uma base/corrediça que, através de uma engrenagem ativada por um motor DC, fará um movimento para que a base com "palitos" de madeira de 15 cm e bolas de isopor com alfinetes nas pontas atinja a bexiga adversária. Controlaremos o avanço da base com uma trava posicionada no ponto desejado. Após 15 segundos, o motor DC aplicará a mesma força com polaridade oposta, retornando a arma ao estado inicial.
+                        <p>Foi projetada para que de uma maneira rápida e eficiente possa atingir a bexiga adversária. 
                         </p>
                     </div>
 
                 </div>
-
+                <div class="caixa">
                 <div class="icones">
-                    <img src="./images/icone01.svg" alt="ícone de ...">
-                    <h4>O Software</h4>
-                    <p>O software utilizado para controlar o robô é programado por blocos, muito parecido com Scratch, por exemplo. Nele conectamos o dispositivo (o nosso robô) pareado por bluetooth e com isso conseguimos controlá-lo. Vale destacar que o aplicativo é só para dispositivos Android.
+                    <img src="./images/IconBluetooth.svg" alt="ícone de Bluetooth">
+                    <h4>Controle Robô</h4>
+                    <p>Nosso robô será controlado pelo celular de um de nossos integrantes, via Bluetooth.
                     </p>
                 </div>
+            </div>
             </div>
         </section>
 
