--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                         <img src="./images/IconNome.svg" alt="ícone do robô unimate">
                         <h4>O Nome</h4>
                         <p>O nome foi inspirado no primeiro robô industrial do mundo, e em um personangem de Gigantes de Aço.</p>
+                        <!-- colocar um botão com link para sobre o robô -->
                     </div>
 
                 </div>
